@@ -2,6 +2,7 @@
 -----
 1. Fix starting chrome media session.
 2. If now-playing timer is 2 seconds or more past duration, refresh status.
+3. Refresh player status when app gets focus on mobile.
 
 0.5.1
 -----
